big table ver 0.0.1

--- a/classify.ipynb
+++ b/classify.ipynb
@@ -1236,14 +1236,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 637,
+   "execution_count": 659,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['ID', 'cityID', 'pet', 'rent', 'space', 'lat', 'lng', 'label', 'floor',\n",
+       "       'unit', 'transport', 'twd97', 'food:avgcost'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 659,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rentdf.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 662,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "outputdf = rentdf.loc[:,['ID','twd97','food:avgcost']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 663,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "#rentdf.join(test).to_csv('./data/tag.csv', index=False)\n",
-    "rentdf.join(test).to_csv('./data/tag_003.csv', index=False)"
+    "outputdf.join(test).to_csv('./data/tag_010.csv', index=False)"
    ]
   },
   {
@@ -1309,22 +1342,225 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 653,
+   "execution_count": 656,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>cityID</th>\n",
+       "      <th>pet</th>\n",
+       "      <th>rent</th>\n",
+       "      <th>space</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lng</th>\n",
+       "      <th>label</th>\n",
+       "      <th>floor</th>\n",
+       "      <th>unit</th>\n",
+       "      <th>...</th>\n",
+       "      <th>twd97</th>\n",
+       "      <th>food:avgcost</th>\n",
+       "      <th>tag:pet</th>\n",
+       "      <th>tag:transport</th>\n",
+       "      <th>tag:capital</th>\n",
+       "      <th>tag:home</th>\n",
+       "      <th>tag:sport</th>\n",
+       "      <th>tag:culture</th>\n",
+       "      <th>tag:safe</th>\n",
+       "      <th>tag:food</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>20743</th>\n",
+       "      <td>24795</td>\n",
+       "      <td>242</td>\n",
+       "      <td>N</td>\n",
+       "      <td>3000</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>25.038749</td>\n",
+       "      <td>121.430277</td>\n",
+       "      <td>套</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1000.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>(293418.800767212, 2770138.4963897606)</td>\n",
+       "      <td>69.631579</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20744</th>\n",
+       "      <td>24796</td>\n",
+       "      <td>111</td>\n",
+       "      <td>N</td>\n",
+       "      <td>12500</td>\n",
+       "      <td>13.00</td>\n",
+       "      <td>25.097802</td>\n",
+       "      <td>121.547934</td>\n",
+       "      <td>套</td>\n",
+       "      <td>2</td>\n",
+       "      <td>961.538462</td>\n",
+       "      <td>...</td>\n",
+       "      <td>(305265.14640106965, 2776722.485463635)</td>\n",
+       "      <td>231.250000</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20745</th>\n",
+       "      <td>24797</td>\n",
+       "      <td>220</td>\n",
+       "      <td>N</td>\n",
+       "      <td>7000</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>25.005620</td>\n",
+       "      <td>121.453737</td>\n",
+       "      <td>套</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1166.666667</td>\n",
+       "      <td>...</td>\n",
+       "      <td>(295798.4368991848, 2766476.701540458)</td>\n",
+       "      <td>103.756098</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20746</th>\n",
+       "      <td>24798</td>\n",
+       "      <td>104</td>\n",
+       "      <td>N</td>\n",
+       "      <td>25000</td>\n",
+       "      <td>15.18</td>\n",
+       "      <td>25.077680</td>\n",
+       "      <td>121.546766</td>\n",
+       "      <td>套</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1646.903821</td>\n",
+       "      <td>...</td>\n",
+       "      <td>(305156.2965833262, 2774493.1891007996)</td>\n",
+       "      <td>172.172414</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20747</th>\n",
+       "      <td>24799</td>\n",
+       "      <td>234</td>\n",
+       "      <td>N</td>\n",
+       "      <td>8000</td>\n",
+       "      <td>7.00</td>\n",
+       "      <td>25.007722</td>\n",
+       "      <td>121.522225</td>\n",
+       "      <td>套</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1142.857143</td>\n",
+       "      <td>...</td>\n",
+       "      <td>(302710.56623409496, 2766734.4178359597)</td>\n",
+       "      <td>159.615385</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(20748, 21)"
+       "          ID  cityID pet   rent  space        lat         lng label  floor  \\\n",
+       "20743  24795     242   N   3000   3.00  25.038749  121.430277     套      5   \n",
+       "20744  24796     111   N  12500  13.00  25.097802  121.547934     套      2   \n",
+       "20745  24797     220   N   7000   6.00  25.005620  121.453737     套      3   \n",
+       "20746  24798     104   N  25000  15.18  25.077680  121.546766     套     12   \n",
+       "20747  24799     234   N   8000   7.00  25.007722  121.522225     套      4   \n",
+       "\n",
+       "              unit   ...                                        twd97  \\\n",
+       "20743  1000.000000   ...       (293418.800767212, 2770138.4963897606)   \n",
+       "20744   961.538462   ...      (305265.14640106965, 2776722.485463635)   \n",
+       "20745  1166.666667   ...       (295798.4368991848, 2766476.701540458)   \n",
+       "20746  1646.903821   ...      (305156.2965833262, 2774493.1891007996)   \n",
+       "20747  1142.857143   ...     (302710.56623409496, 2766734.4178359597)   \n",
+       "\n",
+       "      food:avgcost  tag:pet tag:transport tag:capital tag:home tag:sport  \\\n",
+       "20743    69.631579    False         False        True    False     False   \n",
+       "20744   231.250000    False          True       False    False     False   \n",
+       "20745   103.756098    False         False        True    False      True   \n",
+       "20746   172.172414    False          True       False    False     False   \n",
+       "20747   159.615385    False         False        True    False      True   \n",
+       "\n",
+       "      tag:culture tag:safe tag:food  \n",
+       "20743       False    False    False  \n",
+       "20744        True     True    False  \n",
+       "20745       False    False    False  \n",
+       "20746       False     True    False  \n",
+       "20747       False    False     True  \n",
+       "\n",
+       "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 653,
+     "execution_count": 656,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_csv('./data/tag_003.csv').shape"
+    "pd.read_csv('./data/tag_003.csv').tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 658,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20936, 21)"
+      ]
+     },
+     "execution_count": 658,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv('./tmp/sqltable.csv').shape"
    ]
   },
   {
