--- a/selecrange.ipynb
+++ b/selecrange.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,10 +41,350 @@
     "from LatLonToTWD97 import LatLonToTWD97\n",
     "c = LatLonToTWD97()\n",
     "\n",
-    "rentdf= pd.read_csv('./data/clear_rent_items.csv')\n",
-    "envdf= pd.read_csv('./data/clear_env_items.csv')\n",
+    "rentdf= pd.read_csv('./data/tag_010.csv')\n",
+    "\n",
     "with open('./data/typeid.json') as f:\n",
     "    typeid = dict(json.load(f))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pymysql\n",
+    "\n",
+    "#connect maria rdb\n",
+    "db = pymysql.connect(\n",
+    "        host='172.17.0.3',\n",
+    "        user='root',\n",
+    "        passwd='1234',\n",
+    "        db='rental',\n",
+    "        charset='utf8mb4'\n",
+    "    )\n",
+    "#設置cursor\n",
+    "cursor = db.cursor()\n",
+    "#cursor.execute('SELECT * FROM typeID;')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.execute('describe rentInfo;')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "tmp = cursor.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns = pd.DataFrame(list(tmp))[0].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['ID', 'url', 'update_date', 'title', 'address', 'label', 'temp',\n",
+       "       'sex', 'smoke', 'pet', 'cook', 'space', 'rent', 'floor', 'stories',\n",
+       "       'pattern', 'landlord', 'description', 'lat', 'lng', 'cityID'], dtype=object)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24799"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cursor.execute('select * from rentInfo;')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(list(cursor.fetchall()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns = columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outputdf = pd.merge(rentdf, df, on='ID', how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outputdf['lat'] = outputdf['lat'].astype(np.float64)\n",
+    "outputdf['lng'] = outputdf['lng'].astype(np.float64)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ID</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>twd97</th>\n",
+       "      <td>(294397.3348892754, 2785990.99944911)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>food:avgcost</th>\n",
+       "      <td>124.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tag:pet</th>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tag:transport</th>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tag:capital</th>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tag:home</th>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tag:sport</th>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tag:culture</th>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tag:safe</th>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tag:food</th>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>url</th>\n",
+       "      <td>http://rent.yungching.com.tw/house/967334/</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>update_date</th>\n",
+       "      <td>2016-12-29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>title</th>\n",
+       "      <td>首鼎四房</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>address</th>\n",
+       "      <td>新北市淡水區新春街</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>label</th>\n",
+       "      <td>住</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>temp</th>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sex</th>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>smoke</th>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pet</th>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cook</th>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>space</th>\n",
+       "      <td>62.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rent</th>\n",
+       "      <td>25000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>floor</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>stories</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pattern</th>\n",
+       "      <td>水泥</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>landlord</th>\n",
+       "      <td>NA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>description</th>\n",
+       "      <td>房屋描述首鼎四房交通便利任你行任您輕鬆散步的單純社區文風鼎盛置身優質學區豪華得意居有薪既可入住</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lat</th>\n",
+       "      <td>25.1818</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lng</th>\n",
+       "      <td>121.44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cityID</th>\n",
+       "      <td>251</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                             0\n",
+       "ID                                                           1\n",
+       "twd97                    (294397.3348892754, 2785990.99944911)\n",
+       "food:avgcost                                             124.5\n",
+       "tag:pet                                                  False\n",
+       "tag:transport                                            False\n",
+       "tag:capital                                              False\n",
+       "tag:home                                                  True\n",
+       "tag:sport                                                 True\n",
+       "tag:culture                                              False\n",
+       "tag:safe                                                 False\n",
+       "tag:food                                                 False\n",
+       "url                 http://rent.yungching.com.tw/house/967334/\n",
+       "update_date                                         2016-12-29\n",
+       "title                                                     首鼎四房\n",
+       "address                                              新北市淡水區新春街\n",
+       "label                                                        住\n",
+       "temp                                                         N\n",
+       "sex                                                          N\n",
+       "smoke                                                        N\n",
+       "pet                                                          N\n",
+       "cook                                                         Y\n",
+       "space                                                    62.34\n",
+       "rent                                                     25000\n",
+       "floor                                                        5\n",
+       "stories                                                      0\n",
+       "pattern                                                     水泥\n",
+       "landlord                                                    NA\n",
+       "description    房屋描述首鼎四房交通便利任你行任您輕鬆散步的單純社區文風鼎盛置身優質學區豪華得意居有薪既可入住\n",
+       "lat                                                    25.1818\n",
+       "lng                                                     121.44\n",
+       "cityID                                                     251"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outputdf[0:1].T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outputdf.to_csv('./data/project_table.csv')"
    ]
   },
   {
