big table ver 0.0.2

--- a/classify.ipynb
+++ b/classify.ipynb
@@ -1258,25 +1258,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 662,
+   "execution_count": 664,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "outputdf = rentdf.loc[:,['ID','twd97','food:avgcost']]"
+    "outputdf = rentdf.loc[:,['ID','twd97','food:avgcost','unit']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 663,
+   "execution_count": 665,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "#rentdf.join(test).to_csv('./data/tag.csv', index=False)\n",
-    "outputdf.join(test).to_csv('./data/tag_010.csv', index=False)"
+    "outputdf.join(test).to_csv('./data/tag_011.csv', index=False)"
    ]
   },
   {
@@ -1541,26 +1541,6 @@
    ],
    "source": [
     "pd.read_csv('./data/tag_003.csv').tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 658,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(20936, 21)"
-      ]
-     },
-     "execution_count": 658,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.read_csv('./tmp/sqltable.csv').shape"
    ]
   },
   {
