--- a/Kernel_density_estimation_and_sparkKDE.ipynb
+++ b/Kernel_density_estimation_and_sparkKDE.ipynb
@@ -38,24 +38,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let $H=\\left[\\begin{array}{cc} r & 0 \\\\ 0 & r \\end{array}\\right]$, then 2d KDE can be write \n",
+    "Let $H=\\left[\\begin{array}{cc} r & 0 \\\\ 0 & r \\end{array}\\right]$, then 2d KDE with normal kernal can be write \n",
     "$$\\begin{array}{ll} \\hat f(x;H) &= \\frac{1}{n}\\sum_{i=1}^{n} K_{H}(x-X_i)\\\\\n",
-    "&= c\\end{array}$$"
+    "&= \\frac{1}{n}\\sum_{i=1}^{n}{|H|}^{-\\frac{1}{2}}K(H^{-\\frac{1}{2}}(x-X_i))\\\\\n",
+    "&= \\frac{1}{rn}\\sum_{i=1}^{b}(2\\pi)^{-1}exp(-\\frac{1}{2}(x-X_i)^T H^{-\\frac{1}{2}} H^{-\\frac{1}{2}}(x-X_i))\\\\\n",
+    "&= {\\frac {1}{nr}}\\sum _{i=1}^{n}K{\\Big (}{\\frac{x-X_i}{r}}{\\Big )}\n",
+    "\\end{array}$$, and\n",
+    "$$\\begin{array}{ll}\n",
+    "K_{(2-dim)}([x,y]) &= \\frac{1}{2\\pi}exp(\\frac{1}{2}(x^2+y^2))\\\\ \n",
+    "&= 2\\pi \\frac{1}{2\\pi}exp(\\frac{1}{2}(x^2)) \\frac{1}{2\\pi}exp(\\frac{1}{2}(y^2))\\\\\n",
+    "&= 2\\pi K(x)K(y)\n",
+    "\\end{array}$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "from pyspark import SparkContext, SparkConf\n",
-    "from pyspark.mllib.stat import KernelDensity\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import json\n"
+    "from pyspark.mllib.stat import KernelDensity"
    ]
   },
   {
