visualize map data

--- a/step1_DataPreparation .ipynb
+++ b/step1_DataPreparation .ipynb
@@ -1432,7 +1432,9 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# merge\n",
@@ -1469,7 +1471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
