--- a/Kernel_density_estimation_and_sparkKDE.ipynb
+++ b/Kernel_density_estimation_and_sparkKDE.ipynb
@@ -16,7 +16,7 @@
     "Let $(x_1, x_2, …, x_n)$ be an univariate independent and identically distributed sample drawn from some distribution with an unknown density $f$. We are interested in estimating the shape of this function $f$. Its kernel density estimator is\n",
     "\n",
     "$${\\hat {f}}_{h}(x)={\\frac {1}{n}}\\sum _{i=1}^{n}K_{h}(x-x_{i})={\\frac {1}{nh}}\\sum _{i=1}^{n}K{\\Big (}{\\frac {x-x_{i}}{h}}{\\Big )}$$\n",
-    "where $K$ is the kernal and $h>0$ the bandwidth. "
+    "where $K$ is the kernal and $h>0$ is a smoothing parameter called the bandwidth. "
    ]
   },
   {
@@ -29,7 +29,7 @@
     "Brief introduction KDE for 2-dim data.  \n",
     "For a bivariiate random sample $(X_1, X_2, \\dots , X_n)$ draws from a unknow density $f$, the kernal density estimate is defined by \n",
     "$$\\hat f(x;H) = \\frac{1}{n}\\sum_{i=1}^{n} K_{H}(x-X_i)$$\n",
-    "where $x=(x_1,x_2)^T$ and $X_i=(X_{i1},X_{i2})^T$, $i=1,2,\\dots,n$,  \n",
+    "where $H$ is the bandwidth matrix, $x=(x_1,x_2)^T$ and $X_i=(X_{i1},X_{i2})^T$, $i=1,2,\\dots,n$,  \n",
     "$K_H(x) = {|H|}^{-\\frac{1}{2}}K(H^{-\\frac{1}{2}}x)$ and $K(x)=(2\\pi)^{-1}exp({-\\frac{1}{2}}x^Tx)$.  \n",
     "In general, $K(x)$ is a symmetric probability density function called kernal, and $H$ is a positive-define symmetic matrix."
    ]
